# TpFinalTaller

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vagrantfile  client  configuracion.yaml  configuracionCheats.yaml  server
src/: CMakeLists.txt
src/Tercera_Entrega/Acciones/: accion.h  punetazo.h
src/Tercera_Entrega/Armas/: arma.cpp  arma.h  pistola.cpp  pistola.h  proyectil.cpp  proyectil.h
src/Tercera_Entrega/Enemigos/: enemigo.h  reptil.cpp
src/Tercera_Entrega/Items/: item.h  item_gema.cpp  item_gema.h  item_moneda.h  item_municion.cpp  item_vida.cpp
src/Tercera_Entrega/Personajes/: personaje.cpp  personaje.h
src/client_src/: animacion.cpp  animacion.h  balaView.cpp  balaView.h  camara.cpp  camara.h  cliente.cpp  cliente.h  direcciones.cpp  direcciones.h  enemigoFencerView.cpp  enemigoLizzardView.cpp  enemigoRatView.cpp  enemigoView.cpp  enemigoView.h  enviadorCliente.cpp  interfaz.cpp  interfaz.h  lobby.cpp  lobby.h  lobbyProtocolo.cpp  lobbyProtocolo.h  main.cpp  mapa.cpp  mapa.h  objetoGemaView.cpp  objetoGemaView.h  objetoMonedaView.cpp  objetoMonedaView.h  objetoView.cpp  objetoView.h  objetoZanahoriaView.cpp  objetoZanahoriaView.h  personajeJazzView.cpp  personajeJazzView.h  personajeLoriView.cpp  personajeLoriView.h  personajeSpazView.cpp  personajeSpazView.h  personajeView.cpp  (+8 more)
src/client_src/Animaciones/: animacion.cpp  animacion.h
src/client_src/Animaciones/Animaciones_Enemigos/: animacion_Fencer_caminando.cpp  animacion_Lizzard_caminando.cpp  animacion_Rat_caminando.cpp
src/client_src/Animaciones/Animaciones_Jazz/: animacion_Jazz_caminando.cpp  animacion_Jazz_deja_disparo_quieto.cpp  animacion_Jazz_disparo_quieto.cpp  animacion_Jazz_habilidad.cpp  animacion_Jazz_herido.cpp  animacion_Jazz_intoxicado_caminando.cpp  animacion_Jazz_intoxicado_quieto.cpp  animacion_Jazz_muerte.cpp  animacion_Jazz_saltando.cpp
src/client_src/Animaciones/Animaciones_Lori/: animacion_Lori_caminando.cpp  animacion_Lori_corriendo.cpp  animacion_Lori_deja_disparo_quieto.cpp  animacion_Lori_disparo_quieto.cpp  animacion_Lori_habilidad.cpp  animacion_Lori_herido.cpp  animacion_Lori_intoxicado_caminando.cpp  animacion_Lori_intoxicado_quieto.cpp  animacion_Lori_muerte.cpp  animacion_Lori_quieto.cpp  animacion_Lori_saltando.cpp
src/client_src/Animaciones/Animaciones_Objetos/: animacion_gema.cpp  animacion_moneda.cpp  animacion_municion_tipo_1.cpp  animacion_municion_tipo_2.cpp  (+2 more)
src/client_src/Vista_Enemigos/: enemigoBrujaView.cpp  enemigoFencerView.cpp  enemigoFencerView.h  enemigoLizzardView.cpp  enemigoLizzardView.h  enemigoRatView.cpp  enemigoRatView.h  enemigoView.cpp  enemigoView.h  enemigoViewFactory.cpp  enemigoViewFactory.h
src/client_src/Vista_Objetos/: objetoGemaView.cpp  objetoMonedaView.cpp  objetoMonedaView.h  objetoMunicionTipo_1View.cpp  objetoMunicionTipo_1View.h  objetoMunicionTipo_2View.cpp  objetoMunicionTipo_2View.h  objetoMunicionTipo_3View.cpp  objetoMunicionTipo_3View.h  objetoView.cpp  objetoView.h  objetoViewFactory.cpp  objetoViewFactory.h  objetoZanahoriaView.cpp  objetoZanahoriaView.h
src/client_src/Vista_Personajes/: personajeJazzView.cpp  personajeJazzView.h  personajeJazzViewFactory.cpp  personajeJazzViewFactory.h  personajeLoriView.cpp  personajeLoriView.h  personajeLoriViewFactory.cpp  personajeLoriViewFactory.h  personajeSpazView.cpp  personajeSpazView.h  personajeSpazViewFactory.cpp  personajeSpazViewFactory.h  personajeView.cpp  personajeView.h  personajeViewFactory.cpp
src/client_src/Vista_Proyectiles/: balaView.cpp  balaView.h  balasPersonajes.cpp  proyectilViewFactory.cpp  proyectilViewFactory.h
src/common_src/: accion.h  accion_lobby.h  bala.cpp  bala.h  codigo_enemigo.h  codigo_estado.h  codigo_objeto.h  evento.h  liberror.cpp  liberror.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  socket.cpp
src/editor_src/: level_render.cpp  level_render.h  mainwindow.cpp  mainwindow.h
src/mapas/: mapa2.yaml  mapa_beach.yaml  mapa_castle.yaml  mapa_prueba.yaml
src/server_src/: aceptador.cpp  aceptador.h  arma.cpp  arma.h  configuracion.cpp  configuracion.h  controlador_balas.h  enemigo.cpp  enemigo.h  enemigo_fencer.cpp  enemigo_fencer.h  enemigo_lizzard.cpp  enemigo_lizzard.h  enemigo_rat.cpp  enemigo_rat.h  enviadorJugador.cpp  enviadorJugador.h  jugador.cpp  jugador.h  logicaPartida.cpp  logicaPartida.h  main.cpp  mapa.yaml  monitorPartidas.cpp  monitorPartidas.h  objeto.cpp  objeto.h  objeto_solido.cpp  objeto_solido.h  objeto_zanahoria.cpp  objeto_zanahoria.h  partida.cpp  partida.h  personaje.cpp  personaje.h  personaje_jazz.cpp  personaje_jazz.h  personaje_lori.cpp  personaje_lori.h  personaje_spaz.cpp  (+8 more)
src/server_src/bala/: bala.cpp  bala.h  controlador_balas.h
src/server_src/enemigo/: enemigo.cpp  enemigo.h  enemigo_bruja.cpp  enemigo_bruja.h  enemigo_fencer.cpp  enemigo_fencer.h  enemigo_lizzard.cpp  enemigo_lizzard.h  enemigo_rat.cpp  enemigo_rat.h  fabrica_enemigos.h
src/server_src/estado/: estado.cpp  estado.h  estado_caminando.cpp  estado_caminando.h  estado_cayendo.cpp  estado_corriendo.cpp  estado_corriendo.h  estado_especial.cpp  estado_especial.h  estado_herido.cpp  estado_herido.h  estado_muerto.cpp  estado_muerto.h  estado_quieto.cpp  estado_quieto.h  estado_saltando.cpp  estado_saltando.h  estado_tambalear.cpp
src/server_src/objeto/: fabrica_objetos.h  objeto.cpp  objeto.h  objeto_gema.cpp  objeto_gema.h  objeto_moneda.cpp  objeto_moneda.h  objeto_municion.cpp  objeto_municion.h  objeto_solido.cpp  objeto_solido.h  objeto_zanahoria.cpp  objeto_zanahoria.h
src/server_src/personaje/: personaje.cpp  personaje.h  personaje_jazz.cpp  personaje_jazz.h  personaje_lori.cpp  personaje_lori.h  personaje_spaz.cpp  personaje_spaz.h
src/tests/: Makefile  cmake_install.cmake
src/ventana_lobby/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
tests/: CMakeLists.txt  run.sh  test_bala.cpp  test_bruja.cpp  test_controlador_balas.cpp  test_fencer.cpp  test_jazz.cpp  test_lizzard.cpp  test_logica_partida.cpp  test_lori.cpp  test_rat.cpp  test_rectangulo.cpp  test_spaz.cpp
(+65 files in other folders)
