option(SERVER "Build server" ON)
if(SERVER)
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread")

	add_executable(jazzservidor
		./server_src/aceptador.cpp
		./server_src/aceptador.h
        ./server_src/enemigo_lizzard.cpp
        ./server_src/enemigo_lizzard.h
        ./server_src/enemigo.cpp
        ./server_src/enemigo.h
		./server_src/enviadorJugador.cpp
		./server_src/enviadorJugador.h
		./server_src/jugador.cpp
		./server_src/jugador.h
		./server_src/logicaPartida.cpp
		./server_src/logicaPartida.h
		./server_src/main.cpp
		./server_src/monitorPartidas.cpp
		./server_src/monitorPartidas.h
		./server_src/partida.cpp
		./server_src/partida.h
		./server_src/personaje.cpp
		./server_src/personaje.h
		./server_src/personaje_jazz.cpp
		./server_src/personaje_jazz.h
		./server_src/personaje_lori.cpp
		./server_src/personaje_lori.h
		./server_src/personaje_spaz.cpp
		./server_src/personaje_spaz.h
		./server_src/protocoloServidor.cpp
		./server_src/protocoloServidor.h
		./server_src/recibidorJugador.cpp
		./server_src/recibidorJugador.h
		./server_src/servidor.cpp
		./server_src/servidor.h
		./server_src/arma.cpp
		./server_src/arma.h
		./server_src/controlador_balas.h
		./server_src/objeto.cpp
		./server_src/objeto.h
		./server_src/objeto_zanahoria.cpp
		./server_src/objeto_zanahoria.h
		./server_src/objeto_solido.cpp
		./server_src/objeto_solido.h
		./server_src/rectangulo.h

		
		./common_src/bala.cpp
		./common_src/bala.h
		./common_src/thread.h
		./common_src/socket.h
		./common_src/socket.cpp
		./common_src/resolver.cpp
		./common_src/resolver.h
		./common_src/resolvererror.cpp
		./common_src/resolvererror.h
		./common_src/liberror.cpp
		./common_src/liberror.h
		./common_src/queue.h
		
	)

	# biblioteca YAML-CPP
	find_package(yaml-cpp REQUIRED)
	target_link_libraries(jazzservidor PRIVATE yaml-cpp)
	target_compile_definitions(jazzservidor PUBLIC CONFIG_PATH="${CONFIG_FILE}")

	set(SERVER_OUTPUT_DIR ${CMAKE_BINARY_DIR})

	set_target_properties(jazzservidor
			PROPERTIES
			RUNTIME_OUTPUT_DIRECTORY ${SERVER_OUTPUT_DIR})
endif()


option(CLIENT "Build client" ON)

if(CLIENT)
	set(SDL2PP_WITH_IMAGE ON)
	set(SDL2PP_WITH_MIXER ON)
	set(SDL2PP_WITH_TTF ON)
	add_subdirectory(${CMAKE_SOURCE_DIR}/lib/libSDL2pp ${CMAKE_SOURCE_DIR}/build/lib/libSDL2pp)

	
	find_package(SDL2 REQUIRED)
	include_directories(${SDL2_INCLUDE_DIRS})
	
	# Find the QtWidgets library
	
	find_package(Qt5Widgets CONFIG REQUIRED)
	include_directories(${PROJECT_SOURCE_DIR}/src/ventana_lobby)
	qt5_wrap_ui(UIS_HEADERS
				./ventana_lobby/mainwindow.ui
				#./ventana_lobby/joinpopup.ui
				#./ventana_lobby/createpopup.ui
				)
	set(CMAKE_AUTOMOC ON)
    	set(CMAKE_AUTOUIC ON)
    	set(CMAKE_AUTORCC ON)
	# Adding directory with the autogenerated headers as include directory
	include_directories(${PROJECT_BINARY_DIR}/src)

	add_executable(jazzcliente
		./client_src/main.cpp
		./client_src/lobby.cpp
		./client_src/lobby.h
		./client_src/lobbyProtocolo.cpp
		./client_src/lobbyProtocolo.h
		./client_src/recibidorLobby.cpp
		./client_src/recibidorLobby.h
		./client_src/cliente.h
		./client_src/cliente.cpp
		
		./client_src/recibidor_cliente.cpp
		./client_src/recibidor_cliente.h
		./client_src/renderizado.cpp
		./client_src/renderizado.h
		./client_src/personajeView.h
		./client_src/personajeView.cpp
		./client_src/direcciones.h
		./client_src/direcciones.cpp
		./client_src/personajeJazzView.h
		./client_src/personajeJazzView.cpp
		./client_src/personajeLoriView.h
		./client_src/personajeLoriView.cpp
		./client_src/personajeSpazView.h
		./client_src/personajeSpazView.cpp
		./client_src/animacion.h
		./client_src/animacion.cpp
		./client_src/protocolo_cliente.cpp
		./client_src/protocolo_cliente.h
		./client_src/enviadorCliente.cpp
		./client_src/enviadorCliente.h
		./client_src/balaView.cpp
		./client_src/balaView.h
		./client_src/mapa.cpp
		./client_src/mapa.h
		./client_src/camara.cpp
		./client_src/camara.h
		
		./common_src/thread.h
		./common_src/socket.h
		./common_src/socket.cpp
		./common_src/resolver.cpp
		./common_src/resolver.h
		./common_src/resolvererror.cpp
		./common_src/resolvererror.h
		./common_src/liberror.cpp
		./common_src/liberror.h
		./common_src/queue.h
		
		${UIS_HEADERS}
		
		./ventana_lobby/mainwindow.cpp
		./ventana_lobby/resources.qrc
	)

	# biblioteca YAML-CPP
	find_package(yaml-cpp REQUIRED)
	target_link_libraries(jazzservidor PRIVATE yaml-cpp)
	
	target_link_libraries(jazzcliente PUBLIC Qt5::Widgets Qt5::Core SDL2pp::SDL2pp SDL2::SDL2main)
	target_include_directories(jazzcliente PRIVATE ${PROJECT_SOURCE_DIR}/src)
	target_include_directories(jazzcliente PUBLIC ${PROJECT_SOURCE_DIR}/src/client_src)
	include_directories(${Qt5Widgets_INCLUDE_DIRS})

	set(CLIENT_OUTPUT_DIR ${CMAKE_BINARY_DIR})
	set_target_properties(jazzcliente
			PROPERTIES
			RUNTIME_OUTPUT_DIRECTORY ${CLIENT_OUTPUT_DIR})
	
endif()
